cmake_minimum_required(VERSION 3.9)
project(Graph_Adj)

set(CMAKE_CXX_STANDARD 11)

#add_executable(Graph_Adj main.cpp)
#add_executable(Graph_Adj 01_DFS.cpp)

#add_executable(Graph_Adj 02.Bipartite.cpp)
#add_executable(Graph_Adj 04.Transitive_Closure.cpp)
add_executable(Graph_Adj 05_CheckCycle.cpp)
#add_executable(Graph_Adj 09.CheckStronglyConnected.cpp)
#add_executable(Graph_Adj 13.FindPathConstraints.cpp)
#add_executable(Graph_Adj 14.FindAllOccurences.cpp)
#add_executable(Graph_Adj 17.ReplaceZero.cpp)
#add_executable(Graph_Adj Find_LongestPossibleRouteInMatrix.cpp)
#add_executable(Graph_Adj Calculate_size_of_the_largest_plus_of_1_in_binary_matrix.cpp)
#add_executable(Graph_Adj FindShortestPathInMaze.cpp)
#add_executable(Graph_Adj Chess_Knight_Problem_Find_Shortest_path_from_source_to_destination.cpp)
#add_executable(Graph_Adj Find_longest_sequence_formed_by_adjacent_numbers_in_the_matrix.cpp)
#add_executable(Graph_Adj 26.union-find-algorithm-cycle-detection-graph.cpp)
#add_executable(Graph_Adj 27.kruskals-algorithm-for-finding-minimum-spanning-tree.cpp)




